--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,17 +224,40 @@ a {
   padding-bottom: 1px; }
 
 .centerthis {
+  -webkit-animation-name: fadetop;
+  /* Safari 4.0 - 8.0 */
+  -webkit-animation-duration: .5s ease;
+  /* Safari 4.0 - 8.0 */
+  animation-name: fadetop;
+  animation-duration: 2s;
   position: fixed;
   color: rgba(255, 255, 255, 0.9);
   padding: 10vw;
   font-size: 32px;
   margin: auto;
   position: absolute;
-  top: 55%;
-  transform: translateY(-50%);
+  top: 30%;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   font-kerning: auto;
   padding-bottom: 100px; }
+
+/* Safari 4.0 - 8.0 */
+@-webkit-keyframes fadetop {
+  0% {
+    transform: translateY(-16px);
+    opacity: 0; }
+  100% {
+    transform: translateY(0px);
+    opacity: 1; } }
+
+/* Standard syntax */
+@keyframes fadetop {
+  0% {
+    transform: translateY(-16px);
+    opacity: 0; }
+  100% {
+    transform: translateY(0px);
+    opacity: 1; } }
 
 .bigtext {
   font-size: 60px; }
@@ -384,6 +407,11 @@ a {
   margin: 20px;
   margin-bottom: -20px; }
 
+.dtext3:hover {
+  transform: scale(1.05, 1.05);
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s; }
+
 .purplehead {
   margin: auto;
   height: 148px;
@@ -522,8 +550,8 @@ body {
   width: 320px;
   height: 160px;
   box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.4);
-  -webkit-transition-duration: 0.4s;
-  transition-duration: 0.4s;
+  -webkit-transition-duration: 0.25s;
+  transition-duration: 0.25s;
   -webkit-transition-property: box-shadow, transform;
   -webkit-transition-property: box-shadow, -webkit-transform;
   transition-property: box-shadow, -webkit-transform;
